| Bug #10746 | InnoDB: Error: stored_select_lock_type is 0 inside ::start_stmt()! | ||
|---|---|---|---|
| Submitted: | 19 May 2005 16:47 | Modified: | 9 Dec 2006 19:29 |
| Reporter: | Vadim Tkachenko | ||
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S1 (Critical) |
| Version: | 5.0.6-beta 5.0.28 Enterprise | OS: | Any (Any) |
| Assigned to: | Timothy Smith | Target Version: | |
| Tags: | bfsm_2006_12_07, backport_050030SP1 | ||
[19 May 2005 16:47]
Vadim Tkachenko
[19 May 2005 16:48]
Vadim Tkachenko
Script with database & SP
Attachment: 2.sql (text/plain), 3.68 KiB.
[20 May 2005 8:25]
Jan Lindström
I can't repeat a problem reported. I get following error when trying to create test database. jan@hundin:~/mysql-5.0/client> ./mysql test <../../2.sql ERROR 1418 (HY000) at line 62: This routine is declared to be non-deterministic and to modify data and binary logging is enabled (you *might* want to use theless safe log_bin_trust_routine_creators variable)
[20 May 2005 9:51]
Vadim Tkachenko
Strange... What version do you use ? I'm able to create SP without problem on 5.0.6-beta & latest 5.0.7-beta tree.
[20 May 2005 13:15]
Vadim Tkachenko
Also I found out error is happened only with such params: PARAM="--port=3306 \ --socket=/tmp/mysql.sock \ --user=root \ --log=/usr/local/mysql/data/log.txt \ --log-error=/usr/local/mysql/data/err.log \ --datadir=$FSPATH \ --basedir=$BASEPATH \ --max_connections=1600 \ --max_connect_errors=10 \ --table_cache=2048 \ --max_allowed_packet=1048576 \ --binlog_cache_size=1048576 \ --max_heap_table_size=67108864 \ --sort_buffer_size=65536 \ --join_buffer_size=1048576 \ --thread_cache=16 \ --thread_concurrency=16 \ --thread_stack=64K \ --query_cache_size=0 \ --ft_min_word_len=4 \ --default_table_type=MYISAM \ --transaction_isolation=REPEATABLE-READ \ --tmp_table_size=64M \ --skip-locking \ --server-id=1 \ --innodb_status_file=0 \ --innodb_data_home_dir=$FSPATH \ --innodb_data_file_path=ibdata1:100M:autoextend \ --innodb_log_group_home_dir=$FSPATH \ --innodb_buffer_pool_size=1800M \ --innodb_additional_mem_pool_size=20M \ --innodb_log_file_size=900M \ --innodb_log_files_in_group=2 \ --innodb_log_buffer_size=8M \ --innodb_flush_log_at_trx_commit=2 \ --innodb_lock_wait_timeout=300 \ --innodb_locks_unsafe_for_binlog=1 \ --innodb_thread_concurrency=1000"
[27 May 2005 7:41]
Jan Lindström
Thank you for your bug report. I was able to repeat this problem with 5.0.7bk.
[27 May 2005 17:18]
Heikki Tuuri
Hi! Since a stored procedure in 5.0 is run essentially inside LOCK TABLES, we must set prebuilt->select_lock_type to something else than LOCK_NONE. Fixed in 5.0.7. Regards, Heikki
[27 May 2005 19:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25303
[27 May 2005 20:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25307
[16 Jun 2005 19:04]
Heikki Tuuri
Fixed in 5.0.7.
[16 Sep 2005 2:09]
Shameem Akhter
Do you think the problem got added in 5.0.12-beta build. I am getting the same error with this build. -- S
[16 Sep 2005 7:32]
Heikki Tuuri
Hi! Please show the EXACT and COMPLETE sequence of SQL statements that produces the error for you. I tested sp1 with 5.0.14, and did not get any warning printed by mysqld. Regards, Heikki
[16 Sep 2005 19:49]
Shameem Akhter
The exact command is --
LOAD DATA LOCAL INFILE "../../data_file/prod/inv.csv"
INTO TABLE INVENTORY
FIELDS TERMINATED BY
',' OPTIONALLY ENCLOSED BY '"';
If you need more details, please let me know.
[16 Sep 2005 20:13]
Shameem Akhter
From where I would be able to download 5.0.14 SP1.
[16 Sep 2005 21:41]
Miguel Solorzano
Mr. Shameem Akhter: Could you please can attach a complete script test case like was done with the original report. I was unable to repeat, testing with original script by Vadim. Thanks in advance
[17 Sep 2005 1:56]
Shameem Akhter
Let's take this through email. That way, I would be able to share more information. I can be reached by email and my address is shameem dot f dot akhter at intel dot com. Please send me email and we will share as appropriate.
[17 Sep 2005 15:30]
Heikki Tuuri
Shameem,
can you show us your my.cnf and what SHOW CREATE TABLE says of the table?
Are you enclosing the LOAD command into LOCK TABLES? Please show a mysql client session
that reproduces the error.
I tested LOAD DATA LOCAL with 5.0.13-bk, but did not get any error prints.
mysql> select * into outfile '/home/heikki/dump.csv' FIELDS TERMINATED BY
-> ',' OPTIONALLY ENCLOSED BY '"'
-> FROM alex1;
Query OK, 169767 rows affected (11.42 sec)
mysql> delete from alex1;
Query OK, 169767 rows affected (1 min 38.37 sec)
mysql> LOAD DATA LOCAL INFILE "/home/heikki/dump.csv"
-> INTO TABLE alex1
-> FIELDS TERMINATED BY
-> ',' OPTIONALLY ENCLOSED BY '"';
Query OK, 169767 rows affected (6 min 6.65 sec)
Records: 169767 Deleted: 0 Skipped: 0 Warnings: 0
I also tested enclosing the command in LOCK TABLES WRITE:
heikki@hundin:~/mysql-5.0/client> ./mysql test
Welcome to the MySQL monitor. Commands end with ; or \g.
Your MySQL connection id is 6 to server version: 5.0.13-beta-debug-log
Type 'help;' or '\h' for help. Type '\c' to clear the buffer.
mysql> lock table t write;
Query OK, 0 rows affected (0.00 sec)
mysql> LOAD DATA LOCAL INFILE "/home/heikki/dump2.csv"
-> INTO TABLE t
-> FIELDS TERMINATED BY
-> ',' OPTIONALLY ENCLOSED BY '"';
Query OK, 6 rows affected (0.00 sec)
Records: 6 Deleted: 0 Skipped: 0 Warnings: 0
mysql> LOAD DATA LOCAL INFILE "/home/heikki/dump2.csv"
-> INTO TABLE t
-> FIELDS TERMINATED BY
-> ',' OPTIONALLY ENCLOSED BY '"';
Query OK, 6 rows affected (0.00 sec)
Records: 6 Deleted: 0 Skipped: 0 Warnings: 0
mysql> unlock tables;
Query OK, 0 rows affected (0.00 sec)
But still no error prints. I tested both with binlogging on and off. I tested also 5.0.11,
but still no error.
Regards,
Heikki
[29 Oct 2005 1:00]
Bugs System
No feedback was provided for this bug for over a month, so it is being suspended automatically. If you are able to provide the information that was originally requested, please do so and change the status of the bug back to "Open".
[16 Aug 2006 8:17]
Victoria Reznichenko
I re-open this bug report because I was able to reproduce this behaviour with latest 5.0. I attached file bug10746.zip with tables and stored prcedures. To reproduce this error restore tables and SPs and then execute: mysql> call clearUserOperationsValues(5,"MATCHED"); Query OK, 1 row affected (0.04 sec) mysql> call setup_XMLReportRun(unix_timestamp('2006-08-01 00:00:00'), unix_timestamp(), 'this-month', unix_timestamp()); Query OK, 0 rows affected, 3 warnings (0.67 sec) mysql> call userOperationsValues(0,352, "MATCHED"); Query OK, 0 rows affected, 2 warnings (0.33 sec) Now check error log. I got: 060816 7:15:15 [ERROR] stored_select_lock_type is 0 inside ::start_stmt()!
[16 Aug 2006 19:04]
Heikki Tuuri
Marko, can you look at this? prebuilt->stored_select_lock_type should be set in ::store_lock(), ::external_lock(), and ::start_stmt(). I introduced the whole concept of storing the select lock type to allow consistent reads inside LOCK TABLES. Since stored procedures are in some sense run 'inside LOCK TABLES' in MySQL, that may have confused the current code in ha_innodb.cc. The error itself is benign. Regards, Heikki
[17 Aug 2006 13:02]
Marko Mäkelä
I can't repeat with mysql 5.0 as of the following changeset: ChangeSet 2006/08/16 19:31:33-04:00 iggy@rolltop.ignatz42.dyndns.org Merge rolltop.ignatz42.dyndns.org:/mnt/storeage/mysql-4.1-maint_20328 into rolltop.ignatz42.dyndns.org:/mnt/storeage/mysql-5.0-merge Victoria, can you please provide the .my.cnf as well? I had to disable binlogging to get the procedure dump imported.
[21 Aug 2006 11:45]
Victoria Reznichenko
Hi Marko, I re-tested it with today 5.0 build and got the same error. I used only this options in my.cnf: log-bin binlog-ignore-db=tizor innodb_locks_unsafe_for_binlog=1 log_bin_trust_function_creators
[21 Aug 2006 13:35]
Marko Mäkelä
I can reproduce with mysqld --innodb_locks_unsafe_for_binlog. stored_select_lock_type and select_lock_type are both 0 at the time of the error message. When mysqld is restarted right before issuing the statement 'call userOperationsValues(0,352, "MATCHED");', the error is reported after 22 invocations of ha_innobase::external_lock and 12 invocations of ha_innobase::store_lock.
[21 Aug 2006 13:52]
Marko Mäkelä
The culprit is this piece of code in ha_innobase::store_lock:
if (srv_locks_unsafe_for_binlog &&
prebuilt->trx->isolation_level != TRX_ISO_SERIALIZABLE &&
(lock_type == TL_READ || lock_type == TL_READ_NO_INSERT) &&
(thd->lex->sql_command == SQLCOM_INSERT_SELECT ||
thd->lex->sql_command == SQLCOM_UPDATE ||
thd->lex->sql_command == SQLCOM_CREATE_TABLE)) {
/* In case we have innobase_locks_unsafe_for_binlog
option set and isolation level of the transaction
is not set to serializable and MySQL is doing
INSERT INTO...SELECT or UPDATE ... = (SELECT ...) or
CREATE ... SELECT... without FOR UPDATE or
IN SHARE MODE in select, then we use consistent
read for select. */
prebuilt->select_lock_type = LOCK_NONE;
prebuilt->stored_select_lock_type = LOCK_NONE;
}
Without innodb_locks_unsafe_for_binlog (srv_locks_unsafe_for_binlog), the two locks would
be initialized to LOCK_S.
[19 Sep 2006 15:48]
Heikki Tuuri
Marko,
Breakpoint 1, ha_innobase::start_stmt (this=0x8af5b60, thd=0x8abb230,
lock_type=TL_READ) at ha_innodb.cc:5923
5923 row_prebuilt_t* prebuilt = (row_prebuilt_t*) innobase_prebuilt;
(gdb) print thd->lex->sql_command
$2 = SQLCOM_INSERT_SELECT
(gdb) bt
#0 ha_innobase::start_stmt (this=0x8af5b60, thd=0x8abb230, lock_type=TL_READ)
at ha_innodb.cc:5923
#1 0x081d143e in check_lock_and_start_stmt (thd=0x8abb230, table=0x8af5360,
lock_type=TL_READ) at sql_base.cc:2291
#2 0x081d1a70 in lock_tables (thd=0x8abb230, tables=0x8b72bd8, count=2,
need_reopen=0x4ab2e6c3) at sql_base.cc:2611
#3 0x081d16c0 in open_and_lock_tables (thd=0x8abb230, tables=0x8b72bd8)
at sql_base.cc:2432
#4 0x081a8037 in mysql_execute_command (thd=0x8abb230) at sql_parse.cc:3388
#5 0x082b3905 in sp_instr_stmt::exec_core (this=0x8b74c38, thd=0x8abb230,
nextp=0x4ab2ed68) at sp_head.cc:2487
#6 0x082b35ed in sp_lex_keeper::reset_lex_and_exec_core (this=0x8b74c5c,
thd=0x8abb230, nextp=0x4ab2ed68, open_tables=false, instr=0x8b74c38)
at sp_head.cc:2363
#7 0x082b37b2 in sp_instr_stmt::execute (this=0x8b74c38, thd=0x8abb230,
nextp=0x4ab2ed68) at sp_head.cc:2440
#8 0x082b0fba in sp_head::execute (this=0x8afe168, thd=0x8abb230)
at sp_head.cc:1052
#9 0x082b20c8 in sp_head::execute_procedure (this=0x8afe168, thd=0x8abb230,
args=0x8abb74c) at sp_head.cc:1682
#10 0x081ab340 in mysql_execute_command (thd=0x8abb230) at sql_parse.cc:4476
#11 0x081ae3fe in mysql_parse (thd=0x8abb230,
inBuf=0x8af24e0 "call userOperationsValues(0,352, \"MATCHED\")", length=43)
at sql_parse.cc:5831
#12 0x081a45e3 in dispatch_command (command=COM_QUERY, thd=0x8abb230,
packet=0x8aea4b1 "call userOperationsValues(0,352, \"MATCHED\")",
packet_length=44) at sql_parse.cc:1766
#13 0x081a3e28 in do_command (thd=0x8abb230) at sql_parse.cc:1550
#14 0x081a3271 in handle_one_connection (arg=0x8abb230) at sql_parse.cc:1181
#15 0x40042b63 in start_thread () from /lib/tls/libpthread.so.0
#16 0x4024c18a in clone () from /lib/tls/libc.so.6
(gdb) c
Continuing.
060919 16:45:24 [ERROR] stored_select_lock_type is 0 inside ::start_stmt()!
Breakpoint 3, ha_innobase::external_lock (this=0x8c4a220, thd=0x8abb230,
lock_type=2) at ha_innodb.cc:6035
6035 row_prebuilt_t* prebuilt = (row_prebuilt_t*) innobase_prebuilt;
(gdb)
It is the INSERT ... SELECT ... that sets the stored select lock type to LOCK_NONE. I
think this is ok. InnoDB should not print any error from that.
The fix is to remove this code altogether from ::start_stmt():
if (prebuilt->stored_select_lock_type != LOCK_S
&& prebuilt->stored_select_lock_type != LOCK_X) {
sql_print_error("stored_select_lock_type is %lu inside "
"::start_stmt()!",
prebuilt->stored_select_lock_type);
/* Set the value to LOCK_X: this is just fault
tolerance, we do not know what the correct value
should be! */
prebuilt->select_lock_type = LOCK_X;
}
Marko, please do that in 5.0 and 5.1.
Regards,
Heikki
[20 Sep 2006 10:17]
Marko Mäkelä
Heikki, unfortunately, removing the code from the 5.0 tree would make the following tests fail: im_life_cycle im_utils index_merge index_merge_bdb index_merge_innodb index_merge_innodb2 index_merge_ror index_merge_ror_cpk information_schema information_schema_chmod information_schema_db information_schema_inno
[20 Sep 2006 10:51]
Marko Mäkelä
Sorry, false alarm. It was just mysql-test-run.pl --timer that apparently wanted to execute t/wait_for_process.sh, which was not executable. InnoDB did not print anything when I ran the tests under --manual-gdb, with or without the patch. The tests passed without --timer, and also with --timer after chmod +x t/wait_for_process.sh.
[20 Sep 2006 21:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/12294 ChangeSet@1.2273, 2006-09-20 13:00:49-06:00, tsmith@siva.hindu.god +4 -0 Applied innodb snapshot ss792 and ss854. Bugs fixed: - Bug #21638: InnoDB: possible segfault in page_copy_rec_list_end_no_locks If prefix_len is specified, write it to the insert buffer instead of type->len - bug #10746: InnoDB: Error: stored_select_lock_type is 0 inside ::start_stmt()! INSERT ... SELECT uses LOCK_NONE in innodb_locks_unsafe_for_binlog mode, so do not check for LOCK_X or LOCK_S in start_stmt()
[21 Sep 2006 12:41]
Timothy Smith
Patch queued to -maint team trees (expect to push to 5.0.26 and 5.1.12)
[3 Oct 2006 22:03]
Chad MILLER
Available in 5.0.26.
[3 Oct 2006 22:10]
Chad MILLER
Available in 5.1.12-beta.
[4 Oct 2006 11:13]
Marko Mäkelä
Bug description for the change log: A locking safety check in InnoDB reported a bogus error "stored_select_lock_type is 0 inside ::start_stmt()" for INSERT ... SELECT statements in innodb_locks_unsafe_for_binlog mode. The safety check was removed.
[4 Oct 2006 20:45]
Paul DuBois
Thanks, Marko. Noted in 5.0.26, 5.1.12 changelogs.
[27 Nov 2006 23:45]
Lachlan Mulcahy
Though the change documentation and this bug report that the bug was fixed in 5.0.26, I am still able to reproduce the bug using the test case Victoria attached (visible to MySQL only). Reproduced in both 5.0.26 and 5.0.28 Enterprise. 1. Ensure you have the following in your my.cnf innodb_locks_unsafe_for_binlog log_bin_trust_function_creators log-bin 2. Simply download and unzip attached bug10746.zip. 3. Import both .sql files from the zip extraction into the empty "test" database. 4. Run the following commands within the test database: call clearUserOperationsValues(5,"MATCHED"); call setup_XMLReportRun(unix_timestamp('2006-08-01 00:00:00'), unix_timestamp(), 'this-month', unix_timestamp()); call userOperationsValues(0,352, "MATCHED"); 5. Observe the "[ERROR] stored_select_lock_type is 0 inside ::start_stmt()!" error in the error log.
[29 Nov 2006 1:12]
Lachlan Mulcahy
My tests show that the fix made it into the 5.1.12 release as intended but it was somehow omitted from 5.0.26 and still effects both 5.0.28 Enterprise and 5.0.27 Community.
[29 Nov 2006 10:58]
Jon Stephens
Per email discussion with Lachlan, this bug still shown to exist in 5.0.27/5.0.28. Removed 5.0.26 changelog entry, set bug status to Verified.
[29 Nov 2006 11:17]
Marko Mäkelä
Reassigning to Tim Smith, since I have no access to the internal source repositories of MySQL AB. The printout was removed from our InnoDB 5.0 and 5.1 source trees on September 20.
[7 Dec 2006 23:55]
Timothy Smith
The fix for this bug is applied, and available in the 5.0.30 source code. This should be documented as fixed in 5.0.30. See my comment on Nov 29 for explanation.
[9 Dec 2006 19:29]
Paul DuBois
Noted in 5.0.30 changelog.
